2004-06-03 Scott Dattalo <scott@dattalo.com>
	* examples/12bit/it_12bit.asm: removed
	* regressions/instructions_12bit/instructions_12bit.asm: added
	* regressions/instructions_12bit/instructions_12bit.stc: added
	Now the 12bit core has a regression test.
	
2004-06-02 Scott Dattalo <scott@dattalo.com>
	* cli/cmd_break.cc, src/processor.cc: 18fxxx addressing was broken.
	(the divide by 2 issue for the 18f addressess was not being handled
	correctly.)
	
2004-05-31 Scott Dattalo <scott@dattalo.com>
	* almost all files: Since the Register class and the Instruction class
	are now derived from gpsimValue, all objects that use registers
	and instructions have to change. These changes have been propogated
	through gpsim. Next, the gui will start taking advantage of the
	abstractness that this change introduces.
	* src/16bit-instructions.cc, src/14bit-instructions.h: Manuel Boyer
	reported two bugs with the 16bit subwf instruction. He fixed one
	(N-bit was ignored) with a patch and I fixed the other (OV bit was 
	ignored).

2004-05-27 Scott Dattalo <scott@dattalo.com>
	* src/value.h, src/value.cc: New files that support abstract values.
	* src/register.h, src/pic-instructions.h:
	Now all base objects that have values are derived from the new
	gpsimValue object.

2004-05-27 Scott Dattalo <scott@dattalo.com>
	* src/breakpoints.h, src/breakpoints.cc: Execution breakpoints now
	support a customizable message that will be displayed when the
	break is encountered.

2004-05-21 Scott Dattalo <scott@dattalo.com>
	* src/processor.cc, src/register.h, register.cc, gui/gui_register.h,
	gui/gui_regwin.c: Gui Register Window now can show unitialized register
	data.

2004-05-21 Scott Dattalo <scott@dattalo.com>
	* src/register.h: Added new accessor member functions to the Register
	class to manipulate the new way register values are represented.
	
2004-05-20 Scott Dattalo <scott@dattalo.com>
	* Tons of files... Changed the Register class' 'unsigned int value'