@@ -384,6 +384,11 @@ void EEPROM::initialize(unsigned int new_rom_size)
 
     }
 
+  if(cpu) {
+    cpu->ema.set_cpu(cpu);
+    cpu->ema.set_Registers(rom, rom_size);
+  }
+
 }
 
 
